1.90.8:

2011-10-27  Murray Cumming  <murrayc@murrayc.com>

	tests, examples: Avoid compiler warnings and deprecated API.

	* examples/Makefile.am:
	* tests/Makefile.am: Fix a typo so we really use warning flags.
	* examples/coordinates/window.cc:
	* examples/custom_item/exampleitem.cc:
	* examples/demo/primitives.cc:
	* examples/drag_to_canvas/examplewindow.cc:
	* examples/moving_shapes/window.cc:
	* examples/simple/examplewindow.cc:
	* examples/table/examplewindow.cc:
	* examples/text/window.cc: Fix the build with --enable-warinings=fatal.

2011-10-27  Murray Cumming  <murrayc@murrayc.com>

	init(): Add back the old deprecated method overload.

	* goocanvas/goocanvasmm/init.[h|cc]: Add back the init() call with parameters,
	but deprecated, to avoid disturbing projects using goocanvasmm too much. 

1.90.7:

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	examples, tests: Adapt the init() calls.

	* examples/coordinates/main.cc:
	* examples/custom_item/main.cc:
	* examples/demo/main.cc:
	* examples/drag_to_canvas/main.cc:
	* examples/moving_shapes/main.cc:
	* examples/simple/main.cc:
	* examples/table/main.cc:
	* examples/tablemodel/main.cc:
	* examples/text/main.cc:
	* tests/child_properties/main.cc: Remove the extra parameters.

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	init(): Remove the parameters.

	* goocanvas/goocanvasmm/init.[h|cc]: Remove the (unused) parameters from 
	init().

2011-10-26  Murray Cumming  <murrayc@murrayc.com>

	Fix the --enable-warnings=fatal build.

	* goocanvas/goocanvasmm/init.cc:  Do not include glibmm.h. It is not necessary.

2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	init.h: Move the glibmm.h include to the .cc file.

	* goocanvas/goocanvasmm/init.[h|cc]: The glibmm.h include does not need to be in 
	the header.

2011-10-25  Murray Cumming  <murrayc@murrayc.com>

	Add #includes needed with the latest glibmm.

	* goocanvas/src/bounds.hg:
	* goocanvas/src/enums.hg:
	* goocanvas/src/item.hg: